Fix navigation button alignment on desktop

--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -52,6 +52,12 @@ agm-map {
   right: 110px;
 }
 
+.map-button {
+  position: absolute;
+  right: 110px;
+  bottom: 160px;
+}
+
 .upload-button {
   position: absolute;
   bottom: 40px;
